syntax = "proto3";

option go_package = "github.com/XWS-2022-Tim12/Dislinkt/agentska/common/user";

package user;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service UserService{
        rpc Get(GetRequest) returns(GetResponse) {
        	option (google.api.http) = {
			get: "/user/{id}"
		};
        }
        rpc GetAll(GetAllRequest) returns(GetAllResponse) {
        	option (google.api.http) = {
			get: "/user/users"
		};
        }
        rpc Register(RegisterRequest) returns(RegisterResponse) {
                option (google.api.http) = {
                        post: "/user"
                        body: "user"
                };
        }
}

message GetRequest {
        string id = 1;
}

message GetResponse {
        User user = 1;
}

message GetAllRequest {
}

message GetAllResponse {
        repeated User users = 1;
}

message RegisterRequest {
        User user = 1;
}

message RegisterResponse {
        string success = 1;
}

message User {
        string id = 1;
        string firstname = 2;
        string email = 3;
        string mobileNumber = 4;
        enum GenderEnum {
                Male = 0;
                Female = 1;
        }
        GenderEnum gender = 5;
        google.protobuf.Timestamp birthDay = 6;
        string username = 7;
        string password = 8;
}
